# AI-Empower-Hub-360-NC

./: .dockerignore  .env  .env.example  .gitignore  CNAME  Makefile  README.md  firebase.json  gen-tools.js  gen.js  netlify.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
.llm-chat-history/history/: 2026-02-03_01-58-05Z-hi-can-you.md  2026-02-03_02-02-07Z-hi-we-are-tring-to-test-ai-med-agent.md  2026-02-20_06-58-08Z-can-you-connect-to-this-path-c--users-ctrpr-onedri.md  2026-02-20_07-38-46Z-can-you-delete-bellow-pagehttp---localhost-8080-ai.md  2026-02-20_08-33-00Z-can-you-connect-path-c--users-ctrpr-onedrive-docum.md  2026-02-21_04-15-10Z-can-you-upload-project-from-local-path-to-firbase.md  2026-02-21_04-37-17Z-can-you-continue-work.md  2026-02-25_22-23-11Z-can-you-create-llm-for-this.md  2026-02-25_22-35-25Z-can-you-setup-all-the-env-files.md  2026-02-25_23-03-10Z-can-you-connect-to-repo.md  2026-02-25_23-09-57Z-can-you-connect-to-this-repo-c--users-ctrpr-onedri.md  2026-03-13_20-52-00Z-githubc--users-ctrpr-onedrive-documents-kavitha-ai.md
config/: config.yaml
docs/: README.md
src/: main.py
src/ai_empower_hub_360.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: __init__.py  automation.py  chatbot.py  consulting.py
src/core/: config.py
tests/: test_config.py
website/: CNAME  about.html  agents.html  ai-solutions.html  build.js  careers.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  privacy.html  tools.html
website/css/: style.css
website/js/: main.js
website/services/: ai-analytics.html  ai-api-development.html  ai-film-studio.html  ai-workflow.html  data-pipeline.html  enterprise-automation.html  gpu-workstations.html  local-llm.html  model-finetuning.html  (+3 more)
(+21 files in other folders)
